--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,17 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+buildscript {
+    ext {
+        composeVersion = '1.4.3'
+        coroutineVersion = '1.7.1'
+        roomVersion = '2.5.2'
+    }
+    dependencies {
+        classpath "com.android.tools.build:gradle:7.0.2"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.21"
+        classpath "com.google.dagger:hilt-android-gradle-plugin:2.47"
+    }
+}
 plugins {
-id 'com.android.application' version '8.1.0' apply false
+    id 'com.android.application' version '8.1.0' apply false
     id 'org.jetbrains.kotlin.android' version '1.8.10' apply false
 }
