--- a/build.gradle
+++ b/build.gradle
@@ -15,3 +15,10 @@ plugins {
     id 'com.android.application' version '8.1.0' apply false
     id 'org.jetbrains.kotlin.android' version '1.8.10' apply false
 }
+allprojects {
+    configurations.configureEach {
+        resolutionStrategy {
+            force 'org.xerial:sqlite-jdbc:3.34.0'
+        }
+    }
+}
